Added images count on albums

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
   <item type="id" name="fragment"/>
   <item type="id" name="recycler_view"/>
   <item type="id" name="image_view"/>
+  <item type="id" name="images_count"/>
 </resources>
