--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
-  <color name="transparent">#0000</color>
-  <color name="white">#fff</color>
+  <color name="primary_text">#212121</color>
+  <color name="secondary_text">#727272</color>
+
+  <color name="transparent">#00000000</color>
+  <color name="white">#ffffffff</color>
+  <color name="black">#ff000000</color>
+  <color name="translucent_white">#afff</color>
+
 </resources>
