--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
   <!-- Default screen margins, per the Android Design guidelines. -->
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
+  <dimen name="images_count_bg_corners">8dp</dimen>
+  <dimen name="images_count_bg_padding_vertical">0dp</dimen>
+  <dimen name="images_count_bg_padding_horizontal">8dp</dimen>
 </resources>
