Added Imgur colors

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,23 +8,10 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
-  <style name="DialogOverlay" parent="Theme.AppCompat.Dialog">
-    <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
+  <style name="DialogOverlay" parent="android:style/Theme.Translucent.NoTitleBar">
     <item name="android:windowBackground">@color/transparent</item>
     <item name="android:backgroundDimEnabled">true</item>
-  </style>
-
-  <style name="CustomAlertDialogStyle">
-    <item name="android:bottomBright">@color/transparent</item>
-    <item name="android:bottomDark">@color/transparent</item>
-    <item name="android:bottomMedium">@color/transparent</item>
-    <item name="android:centerBright">@color/transparent</item>
-    <item name="android:centerDark">@color/transparent</item>
-    <item name="android:centerMedium">@color/transparent</item>
-    <item name="android:fullBright">@color/transparent</item>
-    <item name="android:fullDark">@color/transparent</item>
-    <item name="android:topBright">@color/transparent</item>
-    <item name="android:topDark">@color/transparent</item>
+    <item name="android:backgroundDimAmount">0.8</item>
   </style>
 
 </resources>
