--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,10 @@
   <color name="black">#ff000000</color>
   <color name="translucent_white">#afff</color>
 
+  <!-- http://press.imgur.com/ -->
+  <color name="imgur_green">#89C624</color>
+  <color name="downvote_red">#EE4444</color>
+  <color name="link_blue">#4E76C9</color>
+  <color name="hover_gold">#C29F37</color>
+
 </resources>
