--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <item type="id" name="fragment"/>
+  <item type="id" name="view_pager"/>
   <item type="id" name="recycler_view"/>
   <item type="id" name="image_view"/>
   <item type="id" name="images_count"/>
