--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary</item>
     <item name="colorAccent">@color/accent</item>
-    <item name="android:windowBackground">@color/primary_light</item>
+    <item name="android:windowBackground">@color/gallery_bg</item>
   </style>
 
   <style name="DialogOverlay" parent="android:style/Theme.Translucent.NoTitleBar">
