--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
   <dimen name="gallery_image_padding">2dp</dimen>
   <dimen name="gallery_image_bg_corner">4dp</dimen>
   <dimen name="gallery_image_bg_padding">4dp</dimen>
+  <dimen name="baseline_spacing">8dp</dimen>
 </resources>
