--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,27 @@
     <item name="android:backgroundDimAmount">0.8</item>
   </style>
 
+  <style name="ProgressDialog" parent="Theme.AppCompat.Dialog">
+    <item name="android:alertDialogStyle">@style/CustomAlertDialogStyle</item>
+    <item name="android:windowBackground">@color/transparent</item>
+    <item name="android:textColorPrimary">@color/icons</item>
+    <item name="android:backgroundDimEnabled">true</item>
+    <item name="android:textColor">@color/icons</item>
+    <item name="android:textStyle">normal</item>
+    <item name="android:textAppearance">?android:textAppearanceSmall</item>
+  </style>
+
+  <style name="CustomAlertDialogStyle">
+    <item name="android:bottomBright">@color/transparent</item>
+    <item name="android:bottomDark">@color/transparent</item>
+    <item name="android:bottomMedium">@color/transparent</item>
+    <item name="android:centerBright">@color/transparent</item>
+    <item name="android:centerDark">@color/transparent</item>
+    <item name="android:centerMedium">@color/transparent</item>
+    <item name="android:fullBright">@color/transparent</item>
+    <item name="android:fullDark">@color/transparent</item>
+    <item name="android:topBright">@color/transparent</item>
+    <item name="android:topDark">@color/transparent</item>
+  </style>
+
 </resources>
